# Aster-ia

./: .gitignore  AGENTS.md  BUILD_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  ONBOARDING.md  README.md  SECURITY.md  asterion_report.html  asterion_vibe_coding_plan.docx  docker-compose.yml  domain_spec.md  index.html  install_dependencies.ps1  run_build.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
agents/: chat-orchestrator.json  image-studio.json  memory-curator.json  model-curator.json  plugin-auditor.json  privacy-guardian.json  rag-librarian.json  research-supervisor.json  sandbox-runner.json  workflow-operator.json
backend/: .coverage  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/asterion_api/: __init__.py  __main__.py  config.py  dependencies.py  exceptions.py  harness.py  main.py  schemas.py  structured_logging.py
backend/asterion_api/routers/: __init__.py  agents.py  analytics.py  artifacts.py  audit.py  benchmark.py  chat.py  export.py  health.py  images.py  memory.py  models.py  plugins.py  privacy.py  rag.py  research.py  rooms.py  system.py  telemetry.py  voice.py  workflows.py
backend/asterion_api/services/: __init__.py  agent_executor.py  agent_registry.py  agent_sandbox.py  benchmark_service.py  chat_service.py  comfyui_service.py  contradiction_finder.py  deep_research.py  memory_ledger.py  model_router.py  ollama_service.py  plugin_manager.py  privacy_analyzer.py  rag.py  vllm_service.py  voice_service.py  workflow_runner.py
backend/asterion_api/storage/: __init__.py  encrypted_sqlite.py  migrations.py
backend/tests/: test_agent_sandbox.py  test_agent_sandbox_security.py  test_api.py  test_api_endpoints.py  test_api_integration.py  test_config.py  test_config_extended.py  test_core.py  test_model_router.py  test_privacy_analyzer.py  test_rag.py  test_schemas.py  test_secret_scanner.py  test_security.py
crates/core/: Cargo.toml
crates/inference/: Cargo.toml
crates/inference/src/: benchmark.rs  cloud.rs  engine.rs  lib.rs  local.rs  whisper.rs
crates/inference/tests/: inference_tests.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  lib.rs  routes.rs
docs/: CHANGELOG.md  PLATFORM_SNAPSHOT.md  agents-and-skills.md  api.md  architecture.md  global-plan.md  launch-kit.md  local-dev.md  privacy-security.md  privacy.md  product-mvp-plan.md  roadmap.md  rust-migration-plan.md  updates.md
docs/ADR/: 0001-in-process-rust-axum-server.md
eval/: results.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  app.d.ts  main.ts
frontend/tests/: e2e.spec.ts
harness/: meta_harness.py
scripts/: docker-compose.searxng.yml  install_comfyui.ps1  install_comfyui.sh  scan_secrets.py  searxng_settings.yml
skills/: adaptive-artifacts.json  agent-catalog-governance.json  comfyui-generation.json  context-rooms.json  contradiction-finder.json  conversation-orchestration.json  deep-research.json  flight-recorder.json  memory-ledger.json  model-routing.json  ollama-operations.json  plugin-management.json  privacy-radar.json  rag-indexing.json  research-receipts.json  sandboxed-code.json  sqlcipher-storage.json  streaming-chat.json  task-simulation.json  workflow-automation.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
stitch/agent_lab/: code.html
stitch/agent_lab_refined/: code.html
stitch/agent_lab_unified/: code.html
stitch/command_center_home/: code.html
stitch/command_center_home_updated/: code.html
stitch/command_center_refined/: code.html
stitch/command_center_unified/: code.html
stitch/deep_research_studio/: code.html
stitch/deep_research_studio_unified/: code.html
stitch/deep_research_studio_updated/: code.html
stitch/model_settings/: code.html
stitch/model_settings_unified/: code.html
stitch/model_settings_updated/: code.html
stitch/smart_chat/: code.html
stitch/smart_chat_refined/: code.html
stitch/smart_chat_unified/: code.html
stitch/smart_chat_updated/: code.html
stitch/technical_precision/: DESIGN.md
(+56 files in other folders)
